--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@ opencv_python
 scipy
 numpy
 imageio
-scikit_image
 visdom
 tqdm
 imgaug
 Pillow
-scikit-image~
-spams
+scikit-image
+# spams
 
 opencv-python
 lmdb
 torchvision
+pandas
+sklearn
+pytorch_lightning
+clearml
